[gd_scene load_steps=2 format=3 uid="uid://dha4gukhe1h42"]

[ext_resource type="Script" uid="uid://bab8jq71wnk3w" path="res://Assets/Script/CharacterSelectScreen/CharacterSelectScreen.gd.gd" id="1_4dvk2"]

[node name="CharacterSelectScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4dvk2")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PreviousButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="CharacterDisplayPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="SubViewportContainer" type="SubViewportContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/CharacterDisplayPanel"]
layout_mode = 2

[node name="CharacterViewport" type="SubViewport" parent="MarginContainer/VBoxContainer/HBoxContainer/CharacterDisplayPanel/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(200, 200)
render_target_update_mode = 4

[node name="NextButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SelectButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
